--- a/FitTrack/app/src/main/AndroidManifest.xml
+++ b/FitTrack/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         android:theme="@style/Theme.FitTrack"
         tools:targetApi="31" >
         <activity
+            android:name=".MainActivityAddWorkout"
+            android:exported="false" />
+        <activity
             android:name=".MainActivityWorkoutInfo"
             android:exported="false" />
         <activity
